# PodBlazer

./: .gitignore  CMakeLists.txt
engine/: CMakeLists.txt  camera.cc  camera.h  file_manager.cc  file_manager.h  file_reader.cc  file_reader.h  material.cc  material.h  mesh.cc  mesh.h  renderer.cc  renderer.h  resources.cc  resources.h  shader.cc  shader.h  texture.cc  texture.h  transform.cc  transform.h  window.cc  window.h
exts/: CMakeLists.txt
projects/game/: CMakeLists.txt  game_app.cc  game_app.h  game_object.cc  game_object.h  main.cc  map_generator.cc  map_generator.h  materials.cc  materials.h  player.cc  player.h  point_system.cc  point_system.h  text_renderer.cc  text_renderer.h  world_settings.cc  world_settings.h
